# masterpiec_esp

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig.old  start_openocd.bat  start_wroverocd.bat
main/: CMakeLists.txt  Kconfig.projbuild  blink.c  burn_control.c  burn_control.h  hwsetup.h  masterp_hal.h  other_peripherials.c  power_control.c  power_control.h  rotary.c  rotary.h  temp_sensors.c  temp_sensors.h  timerwire.c  timerwire.h  ui_control.c  ui_control.h  ui_screen.c  ui_screen.h  ui_screen2.c  ui_view_handler.c  ui_view_handler.h
